package GameComponents;

public class BoardInit {
    public void initializeDeeds(){

        Deed[] boardDeed = new Deed[24];

        boardDeed[0] = new Deed(2, "START");
        boardDeed[1] = new Deed(1,"Gatekjøkkent Burgerbaren");
        boardDeed[2] = new Deed(1,"Pizzahuset Pizzeriaet");
        boardDeed[3] = new Deed(0,"Sjanse Chance");
        boardDeed[4] = new Deed(1,"Godtbutikken Slikbutikken");
        boardDeed[5] = new Deed(1,"Iskiosken");
        boardDeed[6] = new Deed(0,"Fengsel, På besøg");
        boardDeed[7] = new Deed(2, "Museet");
        boardDeed[8] = new Deed(2,"Biblioteket");
        boardDeed[9] = new Deed(0,"Chance");
        boardDeed[10] = new Deed(2,"Rullebrettparken Skateparken");
        boardDeed[11] = new Deed(2,"Svømmebassenget");
        boardDeed[12] = new Deed(0,"Parkering");
        boardDeed[13] = new Deed(3,"Spillehallen");
        boardDeed[14] = new Deed(3,"Kinoen Biografen");
        boardDeed[15] = new Deed(0,"Chance");
        boardDeed[16] = new Deed(3,"Lgetøjsbutikken");
        boardDeed[17] = new Deed(3,"Dyrebutikken");
        boardDeed[18] = new Deed(0,"Gå i Fengsel");
        boardDeed[19] = new Deed(4,"Bowlnghallen");
        boardDeed[20] = new Deed(4,"Zoologisk Have");
        boardDeed[21] = new Deed(0,"Chance");
        boardDeed[22] = new Deed(5,"Vandlandet");
        boardDeed[23] = new Deed(5,"Strandpromenaden");


    }
}
