package GameComponents;

public class ChanceSquare {
    public ChanceSquare(String squareName) {
        squareName = "Chance";
      
    }
}
