package GameComponents;

public class JailSquare {

    public JailSquare(String squareName) {
        squareName = "Jail";

    }
}
