package GameComponents;

public class StartSquare {

    public StartSquare(String squareName) {
        squareName = "Start";

    }


}
